--- a/LogicAppTemplate.Test/LogicAppTemplate.Test.csproj
+++ b/LogicAppTemplate.Test/LogicAppTemplate.Test.csproj
@@ -50,13 +50,16 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TemplateGeneratorTests.cs" />
+    <Compile Include="ParamGeneratorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LogicAppTemplate\LogicAppTemplate.csproj">
@@ -72,6 +75,8 @@
     <EmbeddedResource Include="TestFiles\APIMMultipleSame.json" />
     <EmbeddedResource Include="TestFiles\APIMMultipleDiffrent.json" />
     <EmbeddedResource Include="TestFiles\complex-logicapp-if.json" />
+    <EmbeddedResource Include="TestFiles\Switch.json" />
+    <EmbeddedResource Include="TestFiles\paramGeneratorLogicAppTemplate.json" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
