--- a/LogicAppTemplate.Test/LogicAppTemplate.Test.csproj
+++ b/LogicAppTemplate.Test/LogicAppTemplate.Test.csproj
@@ -89,6 +89,8 @@
     <EmbeddedResource Include="TestFiles\ApiSource\filegatewayInstance.json" />
     <EmbeddedResource Include="TestFiles\ApiSource\sqlgateway.json" />
     <EmbeddedResource Include="TestFiles\ApiSource\sqlgatewayInstance.json" />
+    <EmbeddedResource Include="TestFiles\ApiSource\sqlcloud.json" />
+    <EmbeddedResource Include="TestFiles\ApiSource\sqlcloudInstance.json" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
