--- a/LogicAppTemplate/LogicAppTemplate.csproj
+++ b/LogicAppTemplate/LogicAppTemplate.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Cmdlets\Get-RGLogicAppsTemplate.ps1" />
     <None Include="packages.config" />
     <EmbeddedResource Include="Templates\starterTemplate.json" />
     <EmbeddedResource Include="Templates\paramTemplate.json" />
