Include empty parameter template generator to create full set of azuredeply.json + azuredeploy.parameters.json

--- a/LogicAppTemplate/LogicAppTemplate.csproj
+++ b/LogicAppTemplate/LogicAppTemplate.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants\Constants.cs" />
+    <Compile Include="EmptyParameterTemplateGenerator.cs" />
     <Compile Include="Models\NestedResourceTemplate.cs" />
     <Compile Include="Models\ParameterTemplate.cs" />
     <Compile Include="NestedTemplateGenerator.cs" />
