--- a/LogicAppTemplate/LogicAppTemplate.csproj
+++ b/LogicAppTemplate/LogicAppTemplate.csproj
@@ -38,8 +38,8 @@
       <HintPath>..\packages\Microsoft.IdentityModel.Clients.ActiveDirectory.2.25.305061457\lib\net45\Microsoft.IdentityModel.Clients.ActiveDirectory.WindowsForms.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -68,6 +68,7 @@
     <Compile Include="Models\ConnectionTemplate.cs" />
     <Compile Include="Models\DeploymentTemplate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VSProjectGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Cmdlets\Get-RGLogicAppsTemplate.ps1" />
@@ -76,6 +77,9 @@
     <EmbeddedResource Include="Templates\paramTemplate.json" />
     <EmbeddedResource Include="Templates\nestedTemplateResource.json" />
     <EmbeddedResource Include="Templates\nestedTemplateShell.json" />
+    <EmbeddedResource Include="Templates\VSProject\DeployProjectTemplate.deployproj" />
+    <EmbeddedResource Include="Templates\VSProject\Deploy-AzureResourceGroup.ps1" />
+    <EmbeddedResource Include="Templates\VSProject\Deployment.targets" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
