--- a/LogicAppTemplate.Test/LogicAppTemplate.Test.csproj
+++ b/LogicAppTemplate.Test/LogicAppTemplate.Test.csproj
@@ -58,9 +58,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AzureResourceIdTests.cs" />
+    <Compile Include="MockResourceCollector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TemplateGeneratorTests.cs" />
     <Compile Include="ParamGeneratorTests.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LogicAppTemplate\LogicAppTemplate.csproj">
@@ -99,6 +102,9 @@
     <None Include="packages.config" />
     <EmbeddedResource Include="TestFiles\misingparameter.json" />
     <EmbeddedResource Include="TestFiles\file-test-triggerandmore.json" />
+    <EmbeddedResource Include="TestFiles\Samples\CustomConnector\providers-Microsoft.Logic-workflows-INT001.Invoice.json" />
+    <EmbeddedResource Include="TestFiles\Samples\CustomConnector\providers-Microsoft.Web-connections-Billogram.json" />
+    <EmbeddedResource Include="TestFiles\Samples\CustomConnector\providers-Microsoft.Web-customApis-Billogram.json" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
