--- a/LogicAppTemplate.Test/LogicAppTemplate.Test.csproj
+++ b/LogicAppTemplate.Test/LogicAppTemplate.Test.csproj
@@ -61,8 +61,10 @@
     <Compile Include="AzureResourceIdTests.cs" />
     <Compile Include="MockResourceCollector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BlobConnectorTest.cs" />
     <Compile Include="TemplateGeneratorTests.cs" />
     <Compile Include="ParamGeneratorTests.cs" />
+    <Compile Include="TableConnectorTest.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -108,6 +110,15 @@
     <EmbeddedResource Include="TestFiles\paramGenerator-nullString.json" />
     <EmbeddedResource Include="TestFiles\Samples\DiagnosticSettings\providers-Microsoft.Logic-workflows-INT001.Invoice.json" />
     <EmbeddedResource Include="TestFiles\Samples\DiagnosticSettings\providers-Microsoft.Logic-workflows-INT001.Invoice-providers-microsoft.insights-diagnosticSettings.json" />
+    <EmbeddedResource Include="TestFiles\Connector-Storage-Table.json" />
+    <EmbeddedResource Include="TestFiles\Samples\TableConnector\providers-Microsoft.Logic-workflows-addDataToTable.json" />
+    <EmbeddedResource Include="TestFiles\Samples\TableConnector\providers-Microsoft.Web-connections-azuretables.json" />
+    <EmbeddedResource Include="TestFiles\Samples\TableConnector\providers-Microsoft.Web-locations-westeurope-managedApis-azuretables.json" />
+    <EmbeddedResource Include="TestFiles\Samples\BlobConnector\providers-Microsoft.Logic-workflows-INT0012C.Workday.Rehire.Leavers.json" />
+    <EmbeddedResource Include="TestFiles\Samples\BlobConnector\providers-Microsoft.Web-connections-azureblob.json" />
+    <EmbeddedResource Include="TestFiles\Samples\BlobConnector\providers-Microsoft.Web-connections-LDAPAdapter.json" />
+    <EmbeddedResource Include="TestFiles\Samples\BlobConnector\providers-Microsoft.Web-customApis-LDAPAdapter.json" />
+    <EmbeddedResource Include="TestFiles\Samples\BlobConnector\providers-Microsoft.Web-locations-northeurope-managedApis-azureblob.json" />
   </ItemGroup>
   <ItemGroup />
   <Choose>
