--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,3 +31,8 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: PublishPipelineArtifact@0
+  inputs:
+    artifactName: 'drop'
+    targetPath: 'LogicAppTemplate/'
