separate IAMapCmdlet from IASchemaCmdlet

--- a/LogicAppTemplate/LogicAppTemplate.csproj
+++ b/LogicAppTemplate/LogicAppTemplate.csproj
@@ -60,6 +60,7 @@
     <Compile Include="AzureResourceId.cs" />
     <Compile Include="Constants\Constants.cs" />
     <Compile Include="EmptyParameterTemplateGenerator.cs" />
+    <Compile Include="GenerateIASchemaCmdlet.cs" />
     <Compile Include="GeneratorCustomConnectorCmdlet.cs" />
     <Compile Include="GeneratorIAMapCmdlet.cs" />
     <Compile Include="GeneratorCmdlet.cs" />
