Import working draft
Implementation of the IncludeInitializeVariable parameter

Contains:
1 x unit test for IncludeInitializeVariable not set (standard behavior)
1 x unit test for IncludeInitializeVariable  set (new implementation)
1 x sample file with a valid initialize variable example

--- a/LogicAppTemplate.Test/LogicAppTemplate.Test.csproj
+++ b/LogicAppTemplate.Test/LogicAppTemplate.Test.csproj
@@ -70,6 +70,7 @@
     <Compile Include="TemplateGeneratorTests.cs" />
     <Compile Include="ParamGeneratorTests.cs" />
     <Compile Include="TableConnectorTest.cs" />
+    <EmbeddedResource Include="TestFiles\Http-Variable.json" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
