Document Get-ParameterTemplate

--- a/LogicAppTemplate/LogicAppTemplate.csproj
+++ b/LogicAppTemplate/LogicAppTemplate.csproj
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="docs\Get-LogicAppTemplate.md" />
+    <None Include="docs\Get-ParameterTemplate.md" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
