--- a/LogicAppTemplate/LogicAppTemplate.csproj
+++ b/LogicAppTemplate/LogicAppTemplate.csproj
@@ -59,6 +59,7 @@
     <Compile Include="AzureResourceId.cs" />
     <Compile Include="Constants\Constants.cs" />
     <Compile Include="EmptyParameterTemplateGenerator.cs" />
+    <Compile Include="UpdateTemplateVariableToValueCmdlet.cs" />
     <Compile Include="GeneratorCustomConnectorCmdlet.cs" />
     <Compile Include="GeneratorIASchemaCmdlet.cs" />
     <Compile Include="GeneratorIAMapCmdlet.cs" />
